[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemies/Enemy2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/JumpEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=5]
radius = 7.0

[sub_resource type="CircleShape2D" id=6]
radius = 37.0

[node name="JumpEnemy" type="KinematicBody2D"]
position = Vector2( 400, 200 )
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 20
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )
hframes = 7

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Jump"
anims/Jump = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="hurtbox" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -1, 0 )
shape = SubResource( 5 )

[node name="playerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
position = Vector2( -1, 0 )
shape = SubResource( 6 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
